apps/pkg-cache/resources/apt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-cacher-ng
spec:
  selector:
    app: apt-cacher-ng
  ports:
    - port: 8080
      targetPort: 8080
