apps/pkg-cache/resources/apt/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apt-cacher-ng
spec:
  podSelector:
    matchLabels:
      app: apt-cacher-ng
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
